--- a/src/styles.css
+++ b/src/styles.css
@@ -1,28 +1,122 @@
 .container {
-    display: 'flex';
-    flex-direction: 'column';
-    min-height: '100vh';
-    background-color: 'white';
-    font-family: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif';
-  }
-  
-  .logo {
-    font-size: '24px';
-    font-weight: 'bold';
-    color: '#FFD700';  /*Gold color for the logo*/
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 
-  .content {
-    flex: 1;
-    display: 'flex';
-    justify-content: 'center';
-    align-items: 'center';
-    padding: '20px';
-  }
+.logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #FFD700; /* Gold color for the logo */
+}
 
-  .heading {
-    font-size: '32px';
-    color: '#333';
-    text-align: center;
-    margin: 'auto';
-  }
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 10px; 
+}
+
+.heading {
+  font-size: 32px;
+  color: #333;
+  text-align: center;
+  margin: 20px;
+}
+
+.section {
+  margin-bottom: 30px; 
+}
+
+.team-section {
+  margin-top: 40px;  
+  text-align: center;
+}
+
+.team-grid {
+  display: flex;
+  flex-wrap: wrap;           
+  gap: 20px;                 
+  justify-content: center;
+}
+
+.about-section {
+  max-width: 700px;       
+  margin: 0 auto;         
+  text-align: center;     
+  margin-top: 20px;       
+}
+
+.about-section p {
+  line-height: 1.5;       
+  font-size: 16px;        
+}
+
+.team-member img {
+  width: 275px;           
+  height: 275px;          
+  object-fit: cover;      
+  border-radius: 8px;    
+  margin-bottom: 8px;     
+}
+
+.team-member p {
+  margin: 0;                 
+  font-weight: bold;
+}
+
+.team-member {
+  display: flex;
+  flex-direction: column;
+  align-items: center;       
+}
+
+.group-button-container {
+  display: flex;
+  gap: 20px;
+}
+
+.groupBtn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #2c2c44;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.groupBtn:hover {
+  background-color: #444;
+}
+
+.group-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.group-list {
+  margin-top: 25px;
+  text-align: left;
+  width: 100%;
+  max-width: 645px;
+  margin-left: 40px;
+}
+
+.group-labels {
+  margin-top: 30px;
+  font-size: 18px;
+  text-align: center;
+}
+
+input[type="text"] {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
